assets/css/main.css
@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");

* {
	box-sizing: border-box;
	font-family: "Roboto", sans-serif;
	color: honeydew;
	margin: 0%;
	padding: 0%;
}

body {
	width: 100vw;
	min-height: 100vh;
	max-width: 100%;
	transition: 0.3s;

	display: flex;
	flex-direction: column;
}
	body.light {
		background: url(../images/background.jpg) center / cover, linear-gradient(#ff000050, #ffff0050);
		background-blend-mode: screen;
	}
	body.dark {
		background: url(../images/background.jpg) center / cover, linear-gradient(#64000080, #66660080);
		background-blend-mode: color-burn;
	}

nav {
	height: 3em;
	display: grid;
	grid-template-rows: 1fr;
	max-width: 100%;
	padding: 0.8%;
}
	nav #links {
		display: grid;
		grid-template-columns: repeat(3, auto);
		column-gap: 5%;
		justify-self: end;
		padding-right: 0.8%;
	}

#links > div:hover * {
	color: coral;
	cursor: pointer;
	transition: color .45s;
}
#links > div i {
	align-self: center;
}

a {
	font-size: large;
	text-decoration: none;
}

/* Taken and tweaked from hover.css --> https://ianlunn.github.io/Hover/ */

.hvr-underline-from-center {
	display: grid;
	grid-template-columns: 15px auto;
	column-gap: 5px;
	-webkit-transform: perspective(1px) translateZ(0);
	transform: perspective(1px) translateZ(0);
	box-shadow: 0 0 1px rgba(0, 0, 0, 0);
	position: relative;
}

.hvr-underline-from-center:before {
	content: "";
	position: absolute;
	z-index: -1;
	left: 51%;
	right: 51%;
	bottom: 0;
	background: coral;
	height: 1px;
	-webkit-transition-property: left, right;
	transition-property: left, right;
	-webkit-transition-duration: 0.3s;
	transition-duration: 0.3s;
	-webkit-transition-timing-function: ease-out;
	transition-timing-function: ease-out;
}

.hvr-underline-from-center:hover:before, .hvr-underline-from-center:focus:before, .hvr-underline-from-center:active:before {
	left: 0;
	right: 0;
}

/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */

#about-me {
	margin: 35px auto;
	background-color: #cccccc28;
	display: grid;
	grid-template-columns: 200px auto;
	column-gap: 15px;
	align-items: center;
	width: 100%;
	padding: 5% 18%;
	border-radius: 8px;
}

.description {
	font-size: 22px;
	text-indent: 5em;
}

.crimson {
	color: #ff3960;
	font-weight: 700;
	font-size: inherit;
}

#selfie {
	width: 200px;
	clip-path: circle(50% at center);
}

